--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,15 @@
 name: flutter_performance_monitor_plus
-description: "In-app performance monitor overlay with FPS, frame times, rebuilds, memory hints, and network logging."
+description: "Flutter in-app performance monitor overlay: live FPS, jank, build/raster times, rebuilds, memory, CPU, and network logging via draggable bubble."
 version: 0.0.1
-homepage: https://github.com/your-org/flutter_performance_monitor_plus
+homepage: https://github.com/khokanuzzaman/flutter_performance_monitor_plus
+repository: https://github.com/khokanuzzaman/flutter_performance_monitor_plus
+issue_tracker: https://github.com/khokanuzzaman/flutter_performance_monitor_plus/issues
+topics:
+  - performance
+  - monitoring
+  - overlay
+  - diagnostics
+  - network
 
 environment:
   sdk: ^3.9.0
